# benchmark-yamux

./: Makefile  README.md  go.mod  go.sum
api/: Protobuild.toml  api.pb.go  api.proto  api_ttrpc.pb.go
cmd/benchmark-yamux-app/: main.go
cmd/benchmark-yamux-client/: Cargo.toml
cmd/benchmark-yamux-client/src/: client.rs
cmd/benchmark-yamux-client/src/proto/: api.rs  api_ttrpc.rs  mod.rs
cmd/benchmark-yamux-server/: main.go
cmd/benchmark-yamux-server-inguest/: main.go
