[package]
name = "benchmark-yamux-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ttrpc = "0.6.1"
protobuf = "2.27.1"
ttrpc-codegen = "0.3"
tokio = { version = "0.2.0", features = ["full"] } 
futures = { version = "0.3.0" }
tokio-yamux = "0.2"
tokio-util = { version = "0.7.0", features = ["codec"] }

[[example]]         
name = "client"
path = "./src/client.rs"
